--- a/index.html
+++ b/index.html
@@ -1,1 +1,84 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Daily Expense Tracker</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+  <!-- HEADER -->
+  <header>
+    <h1>Daily Expense Tracker</h1>
+  </header>
+
+  <!-- NAVIGATION -->
+  <nav>
+    <ul>
+      <li>Home</li>
+      <li>Expenses</li>
+      <li>Summary</li>
+    </ul>
+  </nav>
+
+  <!-- MAIN CONTENT -->
+  <main>
+
+    <!-- ASIDE -->
+    <aside>
+      <p>Track your daily spending easily and efficiently.</p>
+    </aside>
+
+    <!-- EXPENSE FORM SECTION -->
+    <section>
+      <article>
+        <h2>Add Expense</h2>
+
+        <form>
+          <label for="name">Expense Name</label>
+          <input type="text" id="name">
+
+          <label for="amount">Amount</label>
+          <input type="number" id="amount">
+
+          <label for="category">Category</label>
+          <select id="category">
+            <option value="">Select</option>
+            <option>Food</option>
+            <option>Travel</option>
+            <option>Shopping</option>
+            <option>Bills</option>
+          </select>
+
+          <button type="button" onclick="addExpense()">Add Expense</button>
+        </form>
+      </article>
+    </section>
+
+    <!-- EXPENSE LIST -->
+    <section>
+      <article>
+        <h2>Expense List</h2>
+        <ul id="expenseList"></ul>
+      </article>
+    </section>
+
+    <!-- TOTAL DISPLAY -->
+    <figure>
+      <figcaption>
+        Total Expense: ₹ <span id="total">0</span>
+      </figcaption>
+    </figure>
+
+  </main>
+
+  <!-- FOOTER -->
+  <footer>
+    <p>&copy; 2026 Daily Expense Tracker</p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
 
